--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -1,35 +1,21 @@
-@import './base.css';
+@import './reset.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  font-weight: normal;
+@font-face {
+  font-family: 'Montserrat';
+  src: url('./polices/Montserrat.ttf');
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+@layer base {
+  *{
+    font-size: 12px;
+    font-family: 'Montserrat';
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  h1, h2{
+    @apply font-bold;
   }
 }
