--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -82,7 +82,31 @@
     background-repeat: no-repeat;
     background-position: bottom;
   }
+  .lightbg{
+    background-image: url('./img/light-bg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    width: 5px;
+    height: 8px;
+    display: block;
+    background-color: #E0CE64
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+
+    background-color: #cfbd58
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 5px;
+    height: 8px;
+    display: block;
+    background-color: gray;
+  }{
+
+  }
   .text-shadow{
     text-shadow:  0px 0px 15px black;
   }
