--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -119,4 +119,13 @@
   .onDisplay.onDisplay{
     display: block;
   }
+
+  .card.hidden {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .card.block {
+    display: block;
+    opacity: 1;
+  }
 }
